--- a/ports/armadillo/CONTROL
+++ b/ports/armadillo/CONTROL
@@ -1,4 +1,7 @@
 Source: armadillo
 Version: 2019-04-16-6
 Description: Armadillo is a high quality linear algebra library (matrix maths) for the C++ language, aiming towards a good balance between speed and ease of use
+
+Feature: wrapper
+Description: Create the armadillo wrapper rather than just installing the header-only library
 Build-Depends: openblas (!osx), clapack (!osx)
